# data-assistant

./: Dockerfile  Home.py  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
pages_section/: 1_DA_Learning_Assistant.py  2_DA_Learning_Home.py  3_DA_Learning_Feedback.py  4_Flowise_Template.py  5_Flowise_Embed.py
