[tool.poetry.dependencies]
python = "^3.10 || ^3.11"
streamlit = "^1.40.0"
openai = "^1.53.3"
black = "^23.12.1"
python-dotenv = "^1.0.1"
streamlit-authenticator = "^0.3.2"
pyairtable = "^2.3.3"  # Added Airtable 
st-theme = "^1.2.3"
flowise = "^1.0.4"

[tool.poetry.group.develop.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"